--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -463,6 +463,8 @@
   "header": "Заголовок",
   "height": "Высота",
   "highest_bid": "Наивысшая продажа",
+  "hint_offline_account": "Вы смотрите этот аккаунт",
+  "hint_online_account": "Вы можете выполнять транзакции с этим аккаунтом",
   "host": "Сервер",
   "hub_announcement": "Объявление Хаба",
   "immutable": "Immutable",
