--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -82,6 +82,7 @@
   "avg_amount_per_block": "Средна сума на блок",
   "avg_fee_per_block": "Средна такса на блок",
   "balance": "Салдо",
+  "balance_history": "кредитна история",
   "base_target": "Основна цел",
   "bid_order_cancellation": "Отмяна заявка за покупка",
   "bid_order_id": "Заявка за покупка ID",
@@ -127,10 +128,12 @@
   "change_price": "Промяна на цената",
   "change_qty": "Промяна К-во",
   "change_quantity": "Промяна на количеството",
+  "cheap_fee": "евтин",
   "checking_for_updates": "Проверка за актуализации...",
   "choose_own_passphrase": "Искате ли да изберете своя собствена парола-фраза? Щракнете тук.",
   "clear_results": "Изчисти резултатите",
   "clear_search_results": "Изчисти резултата от търсенето",
+  "click_here_for_help": "Кликнете тук, за да научите повече за него",
   "click_here_to_enable": "Натиснете тук за разрешаване.",
   "close": "Затвори",
   "comment": "Коментар",
@@ -219,6 +222,7 @@
   "encrypted_note_no_permission": "Съобщението е криптирано и не може да бъде прочетено от вас.",
   "encrypted_note_nonce": "Шифрована бележка за случая",
   "enter_a_description": "Въведете описание",
+  "enter_pin": "Въведете PIN",
   "error": "Грешка",
   "error_account_id": "Невалиден ID на сметка.",
   "error_account_id_not_specified": "Няма зададен ID на сметката.",
@@ -530,6 +534,7 @@
   "message_is_not_encrypted": "Това съобщение не е шифровано.",
   "messages": "Съобщения",
   "min_nr_of_options": "Минимален брой опции",
+  "minimum_fee": "минимум",
   "minimum_nr_choices": "Минимален брой избор",
   "more_info": "Още информация",
   "multi_out_payment": "Multi Out Payment",
@@ -650,6 +655,7 @@
   "previous_block_hash": "Хеш на предишния блок",
   "previous_page": "Предишна страница",
   "price": "Price",
+  "priority_fee": "приоритет",
   "private_feedback": "Собствена обратна връзка",
   "processors": "Процесори",
   "product": "Продукт",
@@ -747,7 +753,7 @@
   "signature_hash": "Подпис хеш",
   "signed_transaction_bytes": "Байта на подписана сделка",
   "smart_contracts": "Smart Contracts",
-  "standard_fee": "Standard fee:",
+  "standard_fee": "стандарт",
   "start_date": "От дата",
   "start_forging": "Започни коване",
   "start_forging_confirmation": "Ако искате да започнете коване, щракнете върху бутона по-долу, за да потвърдите.",
@@ -820,6 +826,7 @@
   "success_transfer_asset": "Прехвърлянето на актива е в ход!",
   "success_update_contact": "Контактът е актуализиран успешно!",
   "success_valid_token": "Маркерът е валиден и принадлежи към сметка __account_link__. Бил е генериран на __timestamp__.",
+  "suggested_fee": "Предложени такси",
   "tags": "Етикети",
   "tags_categories": "Етикети (категории)",
   "tentative": "Ориентировъчен",
