--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -82,6 +82,7 @@
   "avg_amount_per_block": "Průměrná částka na blok",
   "avg_fee_per_block": "Průměrný poplatek za blok",
   "balance": "Zůstatek",
+  "balance_history": "úvěrová historie",
   "base_target": "Základní cíl",
   "bid_order_cancellation": "Zrušení nabídky",
   "bid_order_id": "ID nabídky",
@@ -127,10 +128,12 @@
   "change_price": "Změnit cenu",
   "change_qty": "Změnit množství",
   "change_quantity": "Změnit množství",
+  "cheap_fee": "Levný",
   "checking_for_updates": "Vyhledávání aktualizací...",
   "choose_own_passphrase": "Chcete si vybrat vlastní heslo? Klikněte sem.",
   "clear_results": "Smazat výsledky",
   "clear_search_results": "Vymazat Výsledky Hledání",
+  "click_here_for_help": "Chcete-li se o tom dozvědět více, klikněte zde",
   "click_here_to_enable": "Klikněte na tlačítko povolit obsah.",
   "close": "Zavřít",
   "comment": "Komentář",
@@ -219,6 +222,7 @@
   "encrypted_note_no_permission": "Poznámka je šifrována, takže si jí nemůžete přečíst.",
   "encrypted_note_nonce": "Nonce šifrované poznámky",
   "enter_a_description": "Vložit popis",
+  "enter_pin": "Zadejte pin",
   "error": "Chyba",
   "error_account_id": "Neplatné ID účtu.",
   "error_account_id_not_specified": "Nebylo určeno ID účtu.",
@@ -530,6 +534,7 @@
   "message_is_not_encrypted": "Tato zpráva není zašifrována.",
   "messages": "Zprávy",
   "min_nr_of_options": "Minimální počet možností",
+  "minimum_fee": "Minimální",
   "minimum_nr_choices": "Nejmenší počet voleb",
   "more_info": "Více informací",
   "multi_out_payment": "Multi Out Platba",
@@ -650,6 +655,7 @@
   "previous_block_hash": "Hash předchozího bloku",
   "previous_page": "Předchozí stránka",
   "price": "Price",
+  "priority_fee": "Přednost",
   "private_feedback": "Soukromá zpětná vazba",
   "processors": "Procesory",
   "product": "Produkt",
@@ -747,7 +753,7 @@
   "signature_hash": "Hash podpisu",
   "signed_transaction_bytes": "Počet bajtů podepsané transakce",
   "smart_contracts": "Smart Contracts",
-  "standard_fee": "Standard fee:",
+  "standard_fee": "Standard",
   "start_date": "Počátek",
   "start_forging": "Zahájit forging",
   "start_forging_confirmation": "Pokud chcete zahájit kování, klikněte na tlačítko níže pro potvrzení.",
@@ -820,6 +826,7 @@
   "success_transfer_asset": "Probíhá přenos aktiv!",
   "success_update_contact": "Kontakt byl úspěšně upraven!",
   "success_valid_token": "Token je platný a patří k účtu __account_link__. Byl vytvořen v __timestamp__.",
+  "suggested_fee": "Doporučené poplatky",
   "tags": "Štítky",
   "tags_categories": "Štítky (kategorie)",
   "tentative": "Nezávazně",
