--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -82,6 +82,7 @@
   "avg_amount_per_block": "Μ.ο. ποσού ανά μπλοκ",
   "avg_fee_per_block": "Μ.ο. τέλος ανά μπλοκ",
   "balance": "Υπόλοιπο",
+  "balance_history": "πιστωτική ιστορία",
   "base_target": "Βασικός στόχος",
   "bid_order_cancellation": "Ακύρωση εντολή προσφοράς",
   "bid_order_id": "Αριθμός προσφοράς",
@@ -127,10 +128,12 @@
   "change_price": "Αλλαγή τιμής",
   "change_qty": "Αλλαγή Ποσότητας",
   "change_quantity": "Αλλαγή ποσότητας",
+  "cheap_fee": "Φτηνός",
   "checking_for_updates": "Έλεγχος για ενημερώσεις...",
   "choose_own_passphrase": "Θέλετε να επιλέξετε τη δική σας φράση πρόσβασης; Κάντε κλικ εδώ.",
   "clear_results": "Διαγραφή αποτελέσματων",
   "clear_search_results": "διαγραφή αποτελεσμάτων αναζήτησης",
+  "click_here_for_help": "Κάντε κλικ εδώ για να μάθετε περισσότερα για αυτό",
   "click_here_to_enable": "Κάντε κλικ εδώ για να το ενεργοποιήσετε.",
   "close": "Κλείσιμο",
   "comment": "Σχόλιο",
@@ -219,6 +222,7 @@
   "encrypted_note_no_permission": "Η σημείωση είναι κρυπτογραφημένη και δεν μπορεί να διαβαστεί από εσάς.",
   "encrypted_note_nonce": "Encrypted Note Nonce",
   "enter_a_description": "Εισαγάγετε μια περιγραφή",
+  "enter_pin": "Εισάγετε την καρφίτσα",
   "error": "Σφάλμα",
   "error_account_id": "Άκυρος αριθμός λογαριασμού.",
   "error_account_id_not_specified": "Δεν ορίστηκε ID λογαριασμού.",
@@ -530,6 +534,7 @@
   "message_is_not_encrypted": "Αυτό το μήνυμα δεν είναι κρυπτογραφημένα.",
   "messages": "Μηνύματα",
   "min_nr_of_options": "Minimum Nr of Options",
+  "minimum_fee": "Ελάχιστο",
   "minimum_nr_choices": "Ελάχιστος αριθμός επιλογών",
   "more_info": "Περισσότερες Πληροφορίες",
   "multi_out_payment": "Πολλαπλή Πληρωμή",
@@ -650,6 +655,7 @@
   "previous_block_hash": "Προηγούμενο Hash μπλοκ",
   "previous_page": "Προηγούμενη Σελίδα",
   "price": "Price",
+  "priority_fee": "Προτεραιότητα",
   "private_feedback": "Ιδιωτική απάντηση",
   "processors": "Επεξεργαστές",
   "product": "Αγαθό",
@@ -747,7 +753,7 @@
   "signature_hash": "Signature Hash",
   "signed_transaction_bytes": "Signed Transaction Bytes",
   "smart_contracts": "Smart Contracts",
-  "standard_fee": "Standard fee:",
+  "standard_fee": "Πρότυπο",
   "start_date": "Ημερομηνία έναρξης",
   "start_forging": "Ξεκινήστε Forging",
   "start_forging_confirmation": "If you want to start forging, click the button below to confirm.",
@@ -820,6 +826,7 @@
   "success_transfer_asset": "Η μεταβίβαση μετοχών είναι σε εξέλιξη!",
   "success_update_contact": "Η επαφή έχει ενημερωθεί με επιτυχία!",
   "success_valid_token": "The token is valid and belongs to account __account_link__. It was generated on __timestamp__.",
+  "suggested_fee": "Προτεινόμενες αμοιβές",
   "tags": "Ετικέτες",
   "tags_categories": "Tags (categories)",
   "tentative": "Αβέβαιο",
