--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -82,6 +82,7 @@
   "avg_amount_per_block": "Srednji iznos po bloku",
   "avg_fee_per_block": "Prosječna provizija po bloku",
   "balance": "Stanje",
+  "balance_history": "kreditne povijesti",
   "base_target": "Osnovni cilj",
   "bid_order_cancellation": "Otkaži kupovni nalog",
   "bid_order_id": "Kupovni nalog ID",
@@ -127,10 +128,12 @@
   "change_price": "Promjena cijene",
   "change_qty": "Promijeni QTY",
   "change_quantity": "Promijenite količinu",
+  "cheap_fee": "jeftino",
   "checking_for_updates": "Provjera nove verzije je u toku...",
   "choose_own_passphrase": "Želite odabrati vlastitu lozinku? Kliknite ovdje.",
   "clear_results": "Obriši Rezultate",
   "clear_search_results": "Obriši rezultate pretraživanja",
+  "click_here_for_help": "Kliknite ovdje da biste saznali više o tome",
   "click_here_to_enable": "Kliknite ovdje za omogućavanje.",
   "close": "Zatvori",
   "comment": "Komentirajte",
@@ -219,6 +222,7 @@
   "encrypted_note_no_permission": "Bilješka je kodirana i ne možete ju pročitati.",
   "encrypted_note_nonce": "Kodirana bilješka",
   "enter_a_description": "Unesite opis",
+  "enter_pin": "Unesite pin",
   "error": "Greška",
   "error_account_id": "Pogrešan račun ID.",
   "error_account_id_not_specified": "Račun ID nije određen.",
@@ -530,6 +534,7 @@
   "message_is_not_encrypted": "Ova poruka nije zaštićena.",
   "messages": "Poruke",
   "min_nr_of_options": "Minimalni broj opcija",
+  "minimum_fee": "Minimum",
   "minimum_nr_choices": "Minimalan broj pokušaja",
   "more_info": "Opširnije",
   "multi_out_payment": "Multi Out Plaćanje",
@@ -650,6 +655,7 @@
   "previous_block_hash": "Hash prethodnog bloka",
   "previous_page": "Prethodna stranica",
   "price": "Cijena",
+  "priority_fee": "Prioritet",
   "private_feedback": "Osobna povratna informacija",
   "processors": "Procesori",
   "product": "Proizvod",
@@ -747,7 +753,7 @@
   "signature_hash": "Hash potpisa",
   "signed_transaction_bytes": "Potpisana transakcija Bytes",
   "smart_contracts": "Smart Contracts",
-  "standard_fee": "Standard fee:",
+  "standard_fee": "Standard",
   "start_date": "Početni datum",
   "start_forging": "Započni kovati",
   "start_forging_confirmation": "Ako želite započeti kovanje kliknite na donji gumb za potvrdu.",
@@ -820,6 +826,7 @@
   "success_transfer_asset": "Transfer asseta napreduje!",
   "success_update_contact": "Kontakt je uspješno izmijenjen!",
   "success_valid_token": "Taj token je valjan i pripada računu __account_link__. Generiran je u __timestamp__.",
+  "suggested_fee": "Predložene naknade",
   "tags": "Tagovi",
   "tags_categories": "Oznake (kategorije)",
   "tentative": "Privremeni",
