--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -82,6 +82,7 @@
   "avg_amount_per_block": "Średnia ilość na blok",
   "avg_fee_per_block": "Średni koszt na blok",
   "balance": "Balans",
+  "balance_history": "historia kredytowa",
   "base_target": "Cel podstawowy",
   "bid_order_cancellation": "Anulowanie zlecenia kupna",
   "bid_order_id": "ID zlecenia kupna",
@@ -127,10 +128,12 @@
   "change_price": "Zmień cenę",
   "change_qty": "Zmień ilość",
   "change_quantity": "Zmień ilość",
+  "cheap_fee": "Tani",
   "checking_for_updates": "Szukam aktualizacji...",
   "choose_own_passphrase": "Chcesz wprowadzić swoje hasło? Naciśnij tutaj.",
   "clear_results": "Wyczyść wyniki",
   "clear_search_results": "Wyczyść wyniki wyszukiwania",
+  "click_here_for_help": "Kliknij tutaj, aby dowiedzieć się więcej na ten temat",
   "click_here_to_enable": "Kliknij tutaj, aby włączyć.",
   "close": "Zamknij",
   "comment": "Komentarz",
@@ -219,6 +222,7 @@
   "encrypted_note_no_permission": "Notatka jest szyfrowana i nie może być odczytana.",
   "encrypted_note_nonce": "Szyfrowana notatka Nonce",
   "enter_a_description": "Wprowadź opis",
+  "enter_pin": "Wpisz PIN",
   "error": "Błąd",
   "error_account_id": "Błedne ID konta.",
   "error_account_id_not_specified": "Id konta niepodane.",
@@ -539,6 +543,7 @@
   "message_is_not_encrypted": "Wiadomość nie jest zaszyfrowana.",
   "messages": "Wiadomośći",
   "min_nr_of_options": "Minimalna ilość opcji",
+  "minimum_fee": "Minimum",
   "minimum_nr_choices": "Minimalna ilość do wyboru",
   "more_info": "Więcej informacji",
   "multi_out_payment": "Płatność wielostanowiskowa",
@@ -659,6 +664,7 @@
   "previous_block_hash": "Hash poprzedniego bloku",
   "previous_page": "Poprzednia strona",
   "price": "Cena",
+  "priority_fee": "Priorytet",
   "private_feedback": "Prywatna informacja zwrotna",
   "processors": "Processors",
   "product": "Produkt",
@@ -756,7 +762,7 @@
   "signature_hash": "Hash podpisu",
   "signed_transaction_bytes": "Bajty podpisanej transakci",
   "smart_contracts": "Smart Contracts",
-  "standard_fee": "Standard fee:",
+  "standard_fee": "Standard",
   "start_date": "Data rozpoczęcia",
   "start_forging": "Rozpocznij Forging",
   "start_forging_confirmation": "Naciśnij przycik poniżej by rozpocząć forging, .",
@@ -830,6 +836,7 @@
   "success_transfer_asset": "Transfer aktywa w toku!",
   "success_update_contact": "Kontak został uaktualniony!",
   "success_valid_token": "Token jest ważny i należy do konta __account_link__. Został wygenerowany __timestamp__.",
+  "suggested_fee": "Sugerowane opłaty",
   "tags": "Tagi",
   "tags_categories": "Tagi (kategorie)",
   "tentative": "Orientacyjny",
