--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -82,6 +82,7 @@
   "avg_amount_per_block": "Qtde. Média Por Bloco",
   "avg_fee_per_block": "Taxa Média Por Bloco",
   "balance": "Saldo",
+  "balance_history": "histórico de crédito",
   "base_target": "Alvo Base",
   "bid_order_cancellation": "Cancelamento da Ordem de Compra",
   "bid_order_id": "ID da ordem de compra",
@@ -127,10 +128,12 @@
   "change_price": "Mudar o preço",
   "change_qty": "Mudar Qtde",
   "change_quantity": "Alterar Quantidade",
+  "cheap_fee": "Barato",
   "checking_for_updates": "Verificando por atualizações...",
   "choose_own_passphrase": "Quer escolher sua própria senha? Clique aqui.",
   "clear_results": "Limpar Resultados",
   "clear_search_results": "Limpar os Resultados da Pesquisa",
+  "click_here_for_help": "Clique aqui para saber mais sobre isso",
   "click_here_to_enable": "Clique aqui para ativá-lo.",
   "close": "Fechar",
   "comment": "Comentar",
@@ -219,6 +222,7 @@
   "encrypted_note_no_permission": "A nota é criptografada e não pode ser lida por você.",
   "encrypted_note_nonce": "Nonce da nota criptografada",
   "enter_a_description": "Digite uma descrição",
+  "enter_pin": "Entrar no pino",
   "error": "Erro",
   "error_account_id": "ID de conta inválido.",
   "error_account_id_not_specified": "ID de conta não especificado.",
@@ -530,6 +534,7 @@
   "message_is_not_encrypted": "Esta mensagem não é criptografada.",
   "messages": "Mensagens",
   "min_nr_of_options": "Número mínimo de opções",
+  "minimum_fee": "Mínimo",
   "minimum_nr_choices": "Número mínimo de escolhas",
   "more_info": "Mais informações",
   "multi_out_payment": "Pagamento Multi Out",
@@ -650,6 +655,7 @@
   "previous_block_hash": "Hash de bloco anterior",
   "previous_page": "Página Anterior",
   "price": "Price",
+  "priority_fee": "Prioridade",
   "private_feedback": "Feedback privado",
   "processors": "Processadores",
   "product": "Produto",
@@ -747,7 +753,7 @@
   "signature_hash": "Hash da Assinatura",
   "signed_transaction_bytes": "Bytes da transação assinada",
   "smart_contracts": "Smart Contracts",
-  "standard_fee": "Standard fee:",
+  "standard_fee": "Padrão",
   "start_date": "Data de início",
   "start_forging": "Iniciar o forjamento",
   "start_forging_confirmation": "Se você quiser começar a forjar, clique no botão abaixo para confirmar.",
@@ -820,6 +826,7 @@
   "success_transfer_asset": "A transferência de ativos está em andamento!",
   "success_update_contact": "O contato foi excluído com sucesso!",
   "success_valid_token": "O token é válido e pertence a conta __account_link__. Foi gerado em __timestamp__.",
+  "suggested_fee": "Taxas sugeridas",
   "tags": "Etiquetas",
   "tags_categories": "Etiquetas (categorias)",
   "tentative": "Tentativa",
