--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -82,6 +82,7 @@
   "avg_amount_per_block": "Quantidade Média por Bloco",
   "avg_fee_per_block": "Taxa Média por Bloco",
   "balance": "Saldo",
+  "balance_history": "histórico de crédito",
   "base_target": "Objetivo Base",
   "bid_order_cancellation": "Cancelamento de Ordem de Compra",
   "bid_order_id": "ID da Ordem de Compra",
@@ -127,10 +128,12 @@
   "change_price": "Mudar o Preço",
   "change_qty": "Mudar Quant.",
   "change_quantity": "Mudar Quantidade",
+  "cheap_fee": "Barato",
   "checking_for_updates": "Procurando atualizações...",
   "choose_own_passphrase": "Quer escolher a sua própria senha? Clique aqui.",
   "clear_results": "Limpar Resultados",
   "clear_search_results": "Limpar Resultado de Pesquisa",
+  "click_here_for_help": "Clique aqui para saber mais sobre isso",
   "click_here_to_enable": "Clique aqui para ativá-lo.",
   "close": "Fechar",
   "comment": "Comentário",
@@ -219,6 +222,7 @@
   "encrypted_note_no_permission": "A nota está cifrada e não pode ser lida por você.",
   "encrypted_note_nonce": "Valor de Segurança da Nota Cifrada",
   "enter_a_description": "Introduzir Descrição",
+  "enter_pin": "Entrar no pino",
   "error": "Erro",
   "error_account_id": "ID de conta inválida.",
   "error_account_id_not_specified": "ID de conta não especificado.",
@@ -530,6 +534,7 @@
   "message_is_not_encrypted": "Esta mensagem não está cifrada.",
   "messages": "Mensagens",
   "min_nr_of_options": "Nº Mínimo de Escolhas",
+  "minimum_fee": "Mínimo",
   "minimum_nr_choices": "Número Mínimo de Escolhas",
   "more_info": "Mais Informações",
   "multi_out_payment": "Pagamento Multi Out",
@@ -650,6 +655,7 @@
   "previous_block_hash": "Hash do Bloco Anterior",
   "previous_page": "Página Anterior",
   "price": "Preço",
+  "priority_fee": "Prioridade",
   "private_feedback": "Valorações Privadas",
   "processors": "Processadores",
   "product": "Produto",
@@ -747,7 +753,7 @@
   "signature_hash": "Hash da Assinatura",
   "signed_transaction_bytes": "Bytes da Transação Assinada",
   "smart_contracts": "Smart Contracts",
-  "standard_fee": "Standard fee:",
+  "standard_fee": "Padrão",
   "start_date": "Data de início",
   "start_forging": "Iniciar o Forjamento",
   "start_forging_confirmation": "Se você quiser começar a forjar, clique no botão abaixo para confirmar.",
@@ -820,6 +826,7 @@
   "success_transfer_asset": "A transferência de ativos está em andamento!",
   "success_update_contact": "O contato atualizou-se com sucesso!",
   "success_valid_token": "O identificador é válido e pertence à conta __account_link__. Foi gerado em __timestamp__.",
+  "suggested_fee": "Taxas sugeridas",
   "tags": "Etiquetas",
   "tags_categories": "Etiquetas (categorias)",
   "tentative": "Tentativa",
