--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -82,6 +82,7 @@
   "avg_amount_per_block": "Suma Medie Per Bloc",
   "avg_fee_per_block": "Taxă Medie Per Bloc",
   "balance": "Sold",
+  "balance_history": "Istoricul de credit",
   "base_target": "Țintă Bază",
   "bid_order_cancellation": "Anulează Ordin Cumpărare",
   "bid_order_id": "ID Ordin Cumpărare",
@@ -127,10 +128,12 @@
   "change_price": "Schimbă Preţul",
   "change_qty": "Modifică Cant",
   "change_quantity": "Modifică Cantitate",
+  "cheap_fee": "Ieftin",
   "checking_for_updates": "Căutare actualizări...",
   "choose_own_passphrase": "Dorești să alegi propria parolă? Fă clic aici.",
   "clear_results": "Șterge rezultate",
   "clear_search_results": "Șterge Rezultate Căutare",
+  "click_here_for_help": "Faceți clic aici pentru a afla mai multe despre el",
   "click_here_to_enable": "Click aici pentru activare.",
   "close": "Închidere",
   "comment": "Comentariu",
@@ -219,6 +222,7 @@
   "encrypted_note_no_permission": "Notița este criptată şi nu poate fi citită de tine.",
   "encrypted_note_nonce": "Notiță Nonce Criptată",
   "enter_a_description": "Introduceţi o descriere",
+  "enter_pin": "Introduceți codul PIN",
   "error": "Eroare",
   "error_account_id": "ID de cont nevalid.",
   "error_account_id_not_specified": "ID de cont nespecificat.",
@@ -530,6 +534,7 @@
   "message_is_not_encrypted": "Acest mesaj nu este criptat.",
   "messages": "Mesaje",
   "min_nr_of_options": "Nr minim de opţiuni",
+  "minimum_fee": "Minim",
   "minimum_nr_choices": "Nr Minim Alegeri",
   "more_info": "Mai multe informaţii",
   "multi_out_payment": "Plata multiplă",
@@ -650,6 +655,7 @@
   "previous_block_hash": "Hash Bloc anterior",
   "previous_page": "Pagina Anterioară",
   "price": "Price",
+  "priority_fee": "Prioritate",
   "private_feedback": "Feedback privat",
   "processors": "Procesoare",
   "product": "Produs",
@@ -747,7 +753,7 @@
   "signature_hash": "Hash-ul Semnăturii",
   "signed_transaction_bytes": "Bytes-ii tranzacției semnalate",
   "smart_contracts": "Smart Contracts",
-  "standard_fee": "Standard fee:",
+  "standard_fee": "Standard",
   "start_date": "Data începerii",
   "start_forging": "Începe forjarea",
   "start_forging_confirmation": "Dacă dorești să începi forjarea, fă clic pe butonul de mai jos pentru a confirma.",
@@ -820,6 +826,7 @@
   "success_transfer_asset": "Transferul activei este în curs de desfăşurare!",
   "success_update_contact": "Persoana de contact a fost actualizată cu succes!",
   "success_valid_token": "Token-ul este valabil şi aparţine contului __account_link__. Acesta a fost generat la __timestamp__.",
+  "suggested_fee": "Taxe recomandate",
   "tags": "Tags",
   "tags_categories": "Tag-uri (categorii)",
   "tentative": "Tentativă",
