--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -82,6 +82,7 @@
   "avg_amount_per_block": "Средняя сумма за блок",
   "avg_fee_per_block": "Средняя комиссия за блок",
   "balance": "Баланс",
+  "balance_history": "кредитная история",
   "base_target": "Базовая Цель",
   "bid_order_cancellation": "Отмена заявки на покупку",
   "bid_order_id": "Номер заявки на покупку",
@@ -127,10 +128,12 @@
   "change_price": "Изменить цену",
   "change_qty": "Изменить количество",
   "change_quantity": "Изменить количество",
+  "cheap_fee": "дешево",
   "checking_for_updates": "Поиск обновлений...",
   "choose_own_passphrase": "Хотите выбрать свой собственный пароль? Нажмите здесь.",
   "clear_results": "Очистить результаты",
   "clear_search_results": "Очистить результаты поиска",
+  "click_here_for_help": "Нажмите здесь, чтобы узнать больше об этом",
   "click_here_to_enable": "Нажмите здесь, чтобы включить.",
   "close": "Закрыть",
   "comment": "Комментарий",
@@ -219,6 +222,7 @@
   "encrypted_note_no_permission": "Примечание зашифровано и не может быть прочитано вами.",
   "encrypted_note_nonce": "Примечание Зашифровано",
   "enter_a_description": "Введите описание",
+  "enter_pin": "Введите пин-код",
   "error": "Ошибка",
   "error_account_id": "Неверный ID аккаунта.",
   "error_account_id_not_specified": "Не указан идентификатор учетной записи.",
@@ -530,6 +534,7 @@
   "message_is_not_encrypted": "Это сообщение не зашифровано.",
   "messages": "Сообщения",
   "min_nr_of_options": "Минимальное количество вариантов",
+  "minimum_fee": "минимальный",
   "minimum_nr_choices": "Минимальное количество вариантов",
   "more_info": "Подробнее",
   "multi_out_payment": "Multi Out Payment",
@@ -650,6 +655,7 @@
   "previous_block_hash": "Хэш Предыдущего Блока",
   "previous_page": "Предыдущая страница",
   "price": "Цена",
+  "priority_fee": "приоритет",
   "private_feedback": "Приватный отзыв",
   "processors": "Процессоры",
   "product": "Товар",
@@ -747,7 +753,7 @@
   "signature_hash": "Хэш Подписи",
   "signed_transaction_bytes": "Подписанные байты транзакции",
   "smart_contracts": "Smart Contracts",
-  "standard_fee": "Standard fee:",
+  "standard_fee": "стандарт",
   "start_date": "Дата начала",
   "start_forging": "Начать Форжинг",
   "start_forging_confirmation": "Если вы хотите начать форжинг, нажмите кнопку ниже для подтверждения.",
@@ -820,6 +826,7 @@
   "success_transfer_asset": "Идет передача актива!",
   "success_update_contact": "Контакт был успешно обновлен!",
   "success_valid_token": "Токен действителен и принадлежит учетной записи __account_link__. Он был создан  __timestamp__.",
+  "suggested_fee": "Предлагаемые сборы",
   "tags": "Теги",
   "tags_categories": "Теги (категории)",
   "tentative": "Предварительный",
