--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -82,6 +82,7 @@
   "avg_amount_per_block": "Quantitat Mitjana per Bloc",
   "avg_fee_per_block": "Despesa Mitjana per Bloc",
   "balance": "Saldo",
+  "balance_history": "història de crèdit",
   "base_target": "Objectiu Base",
   "bid_order_cancellation": "Cancelar una Ordre de Compra",
   "bid_order_id": "ID de l'Ordre de Compra",
@@ -127,10 +128,12 @@
   "change_price": "Canviar Preu",
   "change_qty": "Canviar de Quantitat",
   "change_quantity": "Canviar Quantitat",
+  "cheap_fee": "Barat",
   "checking_for_updates": "Comprovant actualitzacions...",
   "choose_own_passphrase": "Voleu triar la vostra contrasenya? Feu clic aquí.",
   "clear_results": "Netejar Resultats",
   "clear_search_results": "Netejar Resultats de Cerca",
+  "click_here_for_help": "Feu clic aquí per saber-ne més",
   "click_here_to_enable": "Feu clic aquí per habilitar-lo.",
   "close": "Tancar",
   "comment": "Comentari",
@@ -219,6 +222,7 @@
   "encrypted_note_no_permission": "Nota està xifrada i no pot ser llegida per vostè.",
   "encrypted_note_nonce": "Valor de Seguretat de la Nota Xifrada",
   "enter_a_description": "Introduïu una Descripció",
+  "enter_pin": "Introduïu el pin",
   "error": "Error",
   "error_account_id": "ID del Compte no és vàlid.",
   "error_account_id_not_specified": "ID del Compte no especificat.",
@@ -530,6 +534,7 @@
   "message_is_not_encrypted": "Aquest Missatge no està Xifrat.",
   "messages": "Missatges",
   "min_nr_of_options": "Nr mínim d'opcions",
+  "minimum_fee": "Mínim",
   "minimum_nr_choices": "Mínim Nº d'Opcions",
   "more_info": "Més informació",
   "multi_out_payment": "Pagament de sortida múltiple",
@@ -650,6 +655,7 @@
   "previous_block_hash": "Hash del Bloc previ",
   "previous_page": "Pàgina anterior",
   "price": "Price",
+  "priority_fee": "Prioritat",
   "private_feedback": "Comentari privat",
   "processors": "Processadors",
   "product": "Producte",
@@ -747,7 +753,7 @@
   "signature_hash": "Hash de la Firma",
   "signed_transaction_bytes": "Bytes de la Transacció Firmada",
   "smart_contracts": "Smart Contracts",
-  "standard_fee": "Standard fee:",
+  "standard_fee": "Estàndard",
   "start_date": "Data d'inici",
   "start_forging": "Començar a Forjar",
   "start_forging_confirmation": "Si voleu començar a Forjar, feu clic al botó de baix per confirmar.",
@@ -820,6 +826,7 @@
   "success_transfer_asset": "La transferència d'Actius està en marxa!",
   "success_update_contact": "El contacte s'ha actualitzat correctament!",
   "success_valid_token": "L'identificador és vàlida i pertany al compte __account_link__. S'ha generat a les __timestamp__.",
+  "suggested_fee": "Tarifes suggerides",
   "tags": "Etiquetes",
   "tags_categories": "Etiquetes (categories)",
   "tentative": "Provisional",
