--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -82,6 +82,7 @@
   "avg_amount_per_block": "Keskim. summa per lohko",
   "avg_fee_per_block": "Keskim. siirtomaksu per lohko",
   "balance": "Saldo",
+  "balance_history": "luottotiedot",
   "base_target": "Perustavoite",
   "bid_order_cancellation": "Ostotoimeksiannon peruutus",
   "bid_order_id": "Ostotoimeksiannon ID",
@@ -127,10 +128,12 @@
   "change_price": "Muuta hintaa",
   "change_qty": "Muuta määrää",
   "change_quantity": "Muuta määrää",
+  "cheap_fee": "halpa",
   "checking_for_updates": "Tarkistetaan päivityksiä...",
   "choose_own_passphrase": "Haluatko valita oman tunnuslauseen? Klikkaa tästä.",
   "clear_results": "Tyhjennä  tulokset",
   "clear_search_results": "Tyhjennä hakutulokset",
+  "click_here_for_help": "Saat lisätietoja siitä napsauttamalla tätä",
   "click_here_to_enable": "Klikkaa tästä ottaaksesi sen käyttöön.",
   "close": "Sulje",
   "comment": "Kommentti",
@@ -219,6 +222,7 @@
   "encrypted_note_no_permission": "Viesti on salattu etkä pysty lukemaan sitä.",
   "encrypted_note_nonce": "Salatun viestin nonce",
   "enter_a_description": "Kirjoita kuvaus",
+  "enter_pin": "Anna pin",
   "error": "Virhe",
   "error_account_id": "Virheellinen tilinumero.",
   "error_account_id_not_specified": "Tilinumeroa ei annettu.",
@@ -530,6 +534,7 @@
   "message_is_not_encrypted": "Tätä viestiä ei ole salattu.",
   "messages": "Viestit",
   "min_nr_of_options": "Valintojen minimimäärä",
+  "minimum_fee": "minimi",
   "minimum_nr_choices": "Valintojen minimimäärä",
   "more_info": "Lisätietoja",
   "multi_out_payment": "Multi-maksu",
@@ -650,6 +655,7 @@
   "previous_block_hash": "Edellisen lohkon tarkiste",
   "previous_page": "Edellinen sivu",
   "price": "Hinta",
+  "priority_fee": "prioriteetti",
   "private_feedback": "Yksityinen palaute",
   "processors": "Käsittelijät",
   "product": "Tuote",
@@ -747,7 +753,7 @@
   "signature_hash": "Allekirjoituksen tarkiste",
   "signed_transaction_bytes": "Allekirjoitetun tapahtumat tavut",
   "smart_contracts": "Smart Contracts",
-  "standard_fee": "Standard fee:",
+  "standard_fee": "standardi",
   "start_date": "Aloituspäivä",
   "start_forging": "Aloita taonta",
   "start_forging_confirmation": "Vahvista takomisen aloitus painamalla alla olevaa painiketta.",
@@ -820,6 +826,7 @@
   "success_transfer_asset": "Arvopaperin siirto on käynnissä!",
   "success_update_contact": "Yhteystieto päivitetty.",
   "success_valid_token": "Tunnus on kelvollinen ja kuuluu tilin __account_link__. Se luotiin __timestamp__.",
+  "suggested_fee": "Ehdotetut maksut",
   "tags": "Tagit",
   "tags_categories": "Tagit (kategoriat)",
   "tentative": "Alustava",
