--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -82,6 +82,7 @@
   "avg_amount_per_block": "Volume moyen par bloc",
   "avg_fee_per_block": "Frais moyens par bloc",
   "balance": "Solde",
+  "balance_history": "antécédents de crédit",
   "base_target": "Cible de base",
   "bid_order_cancellation": "Annulation d'un ordre d'achat",
   "bid_order_id": "ID de l'ordre d'achat",
@@ -127,10 +128,12 @@
   "change_price": "Modifier le prix",
   "change_qty": "Changer la Qté",
   "change_quantity": "Modifier la quantité",
+  "cheap_fee": "Pas cher",
   "checking_for_updates": "Vérification des mises à jour...",
   "choose_own_passphrase": "Voulez-vous choisir votre propre phrase de passe ? Cliquez ici.",
   "clear_results": "Effacer les résultats",
   "clear_search_results": "Effacer les résultats de recherche",
+  "click_here_for_help": "Cliquez ici pour en savoir plus",
   "click_here_to_enable": "Cliquez ici pour l'activer.",
   "close": "Fermer",
   "comment": "Commenter",
@@ -219,6 +222,7 @@
   "encrypted_note_no_permission": "Vous ne pouvez pas lire cette note parce qu'elle est chiffrée.",
   "encrypted_note_nonce": "Nonce de signature chiffré du billet",
   "enter_a_description": "Indiquez une description",
+  "enter_pin": "Entrez la broche",
   "error": "Erreur",
   "error_account_id": "ID de compte invalide.",
   "error_account_id_not_specified": "ID de compte non spécifié.",
@@ -530,6 +534,7 @@
   "message_is_not_encrypted": "Ce message n'est pas chiffré.",
   "messages": "Messages",
   "min_nr_of_options": "Nbre d'options minimum",
+  "minimum_fee": "Le minimum",
   "minimum_nr_choices": "Nbre de choix minimum",
   "more_info": "Plus d'informations",
   "multi_out_payment": "Paiement Multi Out",
@@ -650,6 +655,7 @@
   "previous_block_hash": "Hachage du bloc précédent",
   "previous_page": "Page précédente",
   "price": "Prix",
+  "priority_fee": "Priorité",
   "private_feedback": "Avis privé",
   "processors": "Processeurs",
   "product": "Produit",
@@ -747,7 +753,7 @@
   "signature_hash": "Hachage de la signature",
   "signed_transaction_bytes": "Octets de la transaction signés",
   "smart_contracts": "Smart Contracts",
-  "standard_fee": "Standard fee:",
+  "standard_fee": "la norme",
   "start_date": "Date de début",
   "start_forging": "Commencer à forger",
   "start_forging_confirmation": "Cliquez sur le bouton ci-dessous pour confirmer et commencer à forger.",
@@ -820,6 +826,7 @@
   "success_transfer_asset": "Le transfert d'actifs est en cours !",
   "success_update_contact": "Le contact a été mis à jour avec succès !",
   "success_valid_token": "Le jeton est valide et appartient au compte __account_link__. Il a été généré le __timestamp__.",
+  "suggested_fee": "Frais suggérés",
   "tags": "Tags",
   "tags_categories": "Tags (catégories)",
   "tentative": "Provisoire",
