--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -82,6 +82,7 @@
   "avg_amount_per_block": "Просечна Количина по Блоку",
   "avg_fee_per_block": "Просечна Провизија по Блоку",
   "balance": "Стање",
+  "balance_history": "кредитна историја",
   "base_target": "Основни Циљ",
   "bid_order_cancellation": "Откажи Поруџбину",
   "bid_order_id": "ИД Куповног Налога",
@@ -127,10 +128,12 @@
   "change_price": "Промените Цену",
   "change_qty": "Промени QТY",
   "change_quantity": "Промените Износ",
+  "cheap_fee": "Јефтини",
   "checking_for_updates": "Провера нове верзије је у току...",
   "choose_own_passphrase": "Желите одабрати властиту лозинку? Кликните овде.",
   "clear_results": "Обриши Резултате",
   "clear_search_results": "Обришите Резултате Претраге",
+  "click_here_for_help": "Кликните овде да бисте сазнали више о томе",
   "click_here_to_enable": "Кликните овде да га омогућите.",
   "close": "Затвори",
   "comment": "Коментариши",
@@ -219,6 +222,7 @@
   "encrypted_note_no_permission": "Порука је заштићена и Ви је не можете прочитати.",
   "encrypted_note_nonce": "Шифрована Порука",
   "enter_a_description": "Унесите опис",
+  "enter_pin": "Унесите пин",
   "error": "Грешка",
   "error_account_id": "Погрешан ID налога.",
   "error_account_id_not_specified": "ID Налога није одређен.",
@@ -530,6 +534,7 @@
   "message_is_not_encrypted": "Ова порука није заштићена.",
   "messages": "Поруке",
   "min_nr_of_options": "Минималан Број Опција",
+  "minimum_fee": "Минимум",
   "minimum_nr_choices": "Минималан Број Избора",
   "more_info": "Више Информација",
   "multi_out_payment": "Мулти Оут Плаћање",
@@ -650,6 +655,7 @@
   "previous_block_hash": "Hash Претходног Блока",
   "previous_page": "Претходна Страница",
   "price": "Цена",
+  "priority_fee": "Приоритет",
   "private_feedback": "Приватна повратна информација",
   "processors": "Процесори",
   "product": "Производ",
@@ -747,7 +753,7 @@
   "signature_hash": "Hash Потпис",
   "signed_transaction_bytes": "Потписана Трансакција Bytes",
   "smart_contracts": "Smart Contracts",
-  "standard_fee": "Standard fee:",
+  "standard_fee": "Стандард",
   "start_date": "Почетни Датум",
   "start_forging": "Почните Ковати",
   "start_forging_confirmation": "Ако желите да започнете са ковањем, потврдите кликом на дугме испод.",
@@ -820,6 +826,7 @@
   "success_transfer_asset": "Трансфер ассет-а напредује!",
   "success_update_contact": "Контакт је успешно ажуриран!",
   "success_valid_token": "Токен је валидан и припада налогу __аccount_link__. Генерисан је у __timestamp__.",
+  "suggested_fee": "Предложене накнаде",
   "tags": "Ознаке",
   "tags_categories": "Ознаке (категорије)",
   "tentative": "Привремени",
