--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -82,6 +82,7 @@
   "avg_amount_per_block": "Blok başına ortalama miktar",
   "avg_fee_per_block": "Ortalama blok  ücreti",
   "balance": "Bakiye",
+  "balance_history": "kredi geçmişi",
   "base_target": "Temel amaç",
   "bid_order_cancellation": "Teklif iptal etme",
   "bid_order_id": "Teklif Sipariş No",
@@ -127,10 +128,12 @@
   "change_price": "Fiyatı değiştir",
   "change_qty": "Miktarı değiştir",
   "change_quantity": "Miktarı değiştir",
+  "cheap_fee": "Ucuz",
   "checking_for_updates": "Güncelleştirmeler kontrol ediliyor...",
   "choose_own_passphrase": "Kendi şifrenizi oluşturmak için tıklayın.",
   "clear_results": "Sonuçları sil",
   "clear_search_results": "Arama sonuçlarını sil",
+  "click_here_for_help": "Daha fazla bilgi edinmek için buraya tıklayın.",
   "click_here_to_enable": "Etkinleştirmek için tıklatın.",
   "close": "Kapat",
   "comment": "Yorum",
@@ -219,6 +222,7 @@
   "encrypted_note_no_permission": "Not şifrelelidir ve sizin tarafından okunamaz.",
   "encrypted_note_nonce": "Encrypted Note Nonce",
   "enter_a_description": " Açıklama yazın",
+  "enter_pin": "PIN girin",
   "error": "Hata",
   "error_account_id": "Geçersiz hesap ID.",
   "error_account_id_not_specified": "Hesap ID belirlenemedi.",
@@ -530,6 +534,7 @@
   "message_is_not_encrypted": "This message is not encrypted.",
   "messages": "Messages",
   "min_nr_of_options": "Minimum Nr of Options",
+  "minimum_fee": "minimum",
   "minimum_nr_choices": "Minimum Nr Of Choices",
   "more_info": "More Info",
   "multi_out_payment": "Çoklu Ödeme",
@@ -650,6 +655,7 @@
   "previous_block_hash": "Previous Block Hash",
   "previous_page": "Previous Page",
   "price": "Price",
+  "priority_fee": "öncelik",
   "private_feedback": "Private Feedback",
   "processors": "İşlemciler",
   "product": "Product",
@@ -747,7 +753,7 @@
   "signature_hash": "İmza Hash",
   "signed_transaction_bytes": "Signed Transaction Bytes",
   "smart_contracts": "Smart Contracts",
-  "standard_fee": "Standard fee:",
+  "standard_fee": "Standart",
   "start_date": "Başlangıç tarihi",
   "start_forging": "Dövmeye başla",
   "start_forging_confirmation": "Dövmeyi  onaylamak için aşağıdaki düğmeyi tıklatın.",
@@ -820,6 +826,7 @@
   "success_transfer_asset": "The asset transfer is in progress!",
   "success_update_contact": "Kişi Başarıyla Güncelleştirildi!",
   "success_valid_token": "The token is valid and belongs to account __account_link__. It was generated on __timestamp__.",
+  "suggested_fee": "Önerilen ücretleri",
   "tags": "Tags",
   "tags_categories": "Tags (categories)",
   "tentative": "Tentative",
