--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -82,6 +82,7 @@
   "avg_amount_per_block": "每個區塊的平均數量",
   "avg_fee_per_block": "每個區塊的平均費用",
   "balance": "餘額",
+  "balance_history": "信用记录",
   "base_target": "基礎目標值",
   "bid_order_cancellation": "買單取消",
   "bid_order_id": "買單 ID",
@@ -127,10 +128,12 @@
   "change_price": "更改價格",
   "change_qty": "改變數量",
   "change_quantity": "更改數量",
+  "cheap_fee": "廉价",
   "checking_for_updates": "正在檢查更新...",
   "choose_own_passphrase": "想選擇您自己的密碼? 請單擊此處。",
   "clear_results": "清除結果",
   "clear_search_results": "清除搜尋結果",
+  "click_here_for_help": "点击这里了解更多信息",
   "click_here_to_enable": "點擊此處啟用它。",
   "close": "關閉​​​",
   "comment": "評論",
@@ -219,6 +222,7 @@
   "encrypted_note_no_permission": "備註是加密的，無法為您讀取。",
   "encrypted_note_nonce": "加密備註驗證碼",
   "enter_a_description": "輸入描述",
+  "enter_pin": "输入pin",
   "error": "錯誤",
   "error_account_id": "無效的帳戶 ID。",
   "error_account_id_not_specified": "未指定的帳戶 ID。",
@@ -530,6 +534,7 @@
   "message_is_not_encrypted": "該信息是未加密的。",
   "messages": "信息",
   "min_nr_of_options": "選項的最小值",
+  "minimum_fee": "最低限度",
   "minimum_nr_choices": "選擇的最小數目",
   "more_info": "更多信息",
   "multi_out_payment": "多付款",
@@ -650,6 +655,7 @@
   "previous_block_hash": "上一個區塊哈希",
   "previous_page": "上一頁 ",
   "price": "價格",
+  "priority_fee": "优先",
   "private_feedback": "私密的反饋",
   "processors": "處理器",
   "product": "產品",
@@ -747,7 +753,7 @@
   "signature_hash": "哈希簽名",
   "signed_transaction_bytes": "已簽名的交易字節",
   "smart_contracts": "Smart Contracts",
-  "standard_fee": "Standard fee:",
+  "standard_fee": "标准",
   "start_date": "開始日期",
   "start_forging": "開始鍛造",
   "start_forging_confirmation": "如果您想開始鍛造，單擊下面的按鈕確認。",
@@ -820,6 +826,7 @@
   "success_transfer_asset": "正在轉移資產！",
   "success_update_contact": "聯絡人已更新成功 ！",
   "success_valid_token": "令牌是有效的，屬於帳戶__account_link__。它產生於 __timestamp__ 。",
+  "suggested_fee": "建议的费用",
   "tags": "標簽",
   "tags_categories": "標簽（類別）",
   "tentative": "暫定",
